Added generic DetailView

--- a/samplesite/bboard/templates/bboard/by_rubric.html
+++ b/samplesite/bboard/templates/bboard/by_rubric.html
@@ -11,7 +11,7 @@
 
 {% for bb in bbs %}
     <div>
-        <h2> {{ bb.title }}</h2>
+        <h2><a href="{% url 'detail' pk=bb.pk %}">{{ bb.title }}</a></h2>
         <p> {{ bb.content }} </p>
         <p> {{ bb.published }} </p>
     </div>
