--- a/samplesite/bboard/templates/bboard/index.html
+++ b/samplesite/bboard/templates/bboard/index.html
@@ -3,9 +3,15 @@
 {% block content %}
     {% for bb in bbs %}
         <div class="b">
-            <h2>{{ bb.title }} </h2>
+
+            <h2><a href="{% url 'detail' pk=bb.pk %}">{{ bb.title }}</a></h2>
+
             <p> {{ bb.content }} </p>
-                    <a href="{% url 'by_rubric' bb.rubric.pk }}">{{ bb.rubric.name}}</a>
+
+            {% if bb.rubric.pk %}
+                <a href="{% url 'by_rubric' bb.rubric.pk %}">{{ bb.rubric.name}}</a>
+            {% endif %}
+
             <p>{{ bb.published }} </p>
         </div>
     {% endfor %}
