--- a/samplesite/bboard/templates/bboard/create.html
+++ b/samplesite/bboard/templates/bboard/create.html
@@ -8,7 +8,7 @@
 <form  method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="'submit" value="Добавить">
+    <input type="submit" value="Добавить">
 </form>
 
 {% endblock %}
